# go-novel-dl

./: .dockerignore  .gitignore  .goreleaser.yml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  package.bat  run.bat  run.sh
.github/workflows/: docker.yml  nightly.yml  pull.yml  push.yml  release.yml
cmd/novel-cli/: main.go
desktop/: Cargo.toml  build.rs  novel-dl.desktop
desktop/src/: main.rs
docs/: architecture.md
internal/app/: discovery.go  discovery_test.go  runtime.go  runtime_test.go
internal/cli/: clean.go  config.go  download.go  export.go  helpers.go  helpers_test.go  pagination.go  root.go  search.go  ui.go  ui_test.go  web.go
internal/config/: bookshelf_store.go  bookshelf_store_test.go  defaults.go  loader.go  site_store.go  site_store_test.go  task_store.go  task_store_test.go  types.go
internal/exporter/: exporter.go  exporter_indent_test.go  exporter_test.go  filename_test.go
internal/model/: book.go
internal/pipeline/: pipeline.go
internal/progress/: progress.go  progress_test.go
internal/site/: aaatxt.go  aaatxt_test.go  alicesw.go  alicesw_test.go  biquge345.go  biquge_common.go  candidate_health_test.go  ciweimao.go  ciweimao_ciyuanji_search_test.go  ciyuanji.go  czbooks.go  defaults.go  domutil.go  esjzone.go  esjzone_test.go  faloo.go  fanqienovel.go  fsshu.go  fsshu_test.go  haiwaishubao.go  hongxiuzhao.go  htmlutil.go  httpclient.go  integration_download_test.go  ixdzs8.go  ixdzs8_test.go  japanese.go  japanese_search_test.go  japanese_test.go  jsonutil.go  kadokado.go  lightnovel_sites.go  lightnovel_sites_test.go  linovelib.go  linovelib_test.go  linovelib_wenku8_search_test.go  manual_health_test.go  metadata.go  mjyhb.go  n17k.go  (+47 more)
internal/state/: manager.go
internal/store/: library.go  library_test.go
internal/textconv/: converter.go  converter_test.go
internal/ui/: console.go
internal/version/: version.go
internal/web/: default_sources_test.go  server.go  (+7 more)
tests/: README.md
winres/: init.go  winres.json
(+6 files in other folders)
